Fix spacing issue with location li

--- a/art.css
+++ b/art.css
@@ -54,7 +54,7 @@ button:last-child{
 	font-size: 1.25em;
 	line-height: 3.5em;
 }
-#important{
+.important{
 	color: #869d96;
 	font-weight: 800;
 }
@@ -64,7 +64,7 @@ button:last-child{
 #left li{
 	margin-left:0px !important;
 }
-li:last-child{
+#left li:last-child{
 	margin-right:30px !important;
 }
 #navbar li{
@@ -94,14 +94,16 @@ li:last-child{
 }
 #circleDetails{
     display:inline-block; 
-    margin: 20px;
+    margin: 30px;
 }
 #circleDetails div{
+	display:flex-box;
 	float:left;
+	margin:20px;
 }
 #circleDetails img{
-	/*border-radius:500px;
-	margin-left: 30px;*/	
+	width:300px;
+	margin:0px;	
 }
 #about ul{
 	list-style-type: none;
@@ -139,6 +141,9 @@ li:last-child{
 	max-width: 300px;
 	border-radius: 500px;
 	border: white 7px solid;
+}
+.work{
+	color:white;
 }
 .work h3{
 	color: #C4F1BE;
